--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "ExpenseTrackerProject",
+    "name": "expenseTrackerProject",
     "slug": "ExpenseTrackerProject",
     "version": "1.0.0",
     "orientation": "portrait",
